# OAS

./: .gitignore  README.md  UPDATES.md  main.py  oas.py  pyproject.toml  requirements.txt  setup.py
TestProject/Happy/: Happy.oasproj  state.oasproj
mosaic/: config.py  schemas.py  shell.py
mosaic/Session/: session_manager.py
mosaic/SystemManager/trial/: trial_run.py
mosaic/core_measurements/anchor/: anchor_point.py
mosaic/core_measurements/angles/: angle_calculator.py
mosaic/core_measurements/euclidean_distance/: euclidean_distance.py  euclidean_distance_uncertainty.py
mosaic/core_measurements/landmarks/: landmark_uncertainty.py
oas/: anchor_point.py  anchors.py  centering.py  cli.py  config.py  curve_area.py  curves.py  data.py  io.py  moth_landmarks.py  schemas.py  shell.py
oas/ProjectManager/: project_creation.py
oas/Session/: session_manager.py
oas/SystemManager/: participant_creation.py  system_verification.py
oas/SystemManager/participants/: participant_creation.py
oas/SystemManager/project/: project_creation.py
oas/SystemManager/trial/: trial_creation.py  trial_run.py
oas/anchor/: anchor_point.py  anchors.py
oas/centering/: centering.py
oas/core_measurements/anchor/: anchor_point.py  anchors.py
oas/core_measurements/angles/: angle_uncertainty.py  angles.py
oas/core_measurements/area/: curve_area.py
oas/core_measurements/centering/: centering.py
oas/curves/: curve_fitting.py  curves.py
oas/euclidean_distance/: euclidean.py  euclidean_distance.py
oas/pose_correction/: pose.py  pose_correction.py
(+21 files in other folders)
